--- a/src/components/side-panel/SidePanel.module.scss
+++ b/src/components/side-panel/SidePanel.module.scss
@@ -72,7 +72,6 @@
         }
         .channelsList {
             max-height: 10rem;
-            padding: .5rem 0;
             margin-top: 3.5rem;
             font-size: $default-font-size;
             overflow-y: auto;
@@ -83,10 +82,15 @@
                 padding: .5rem 1rem;
                 word-break: break-all;
                 cursor: pointer;
-                transition: margin-left .1s ease-in-out;
+                transition: background-color .09s ease-in-out;
                 &:hover {
-                    margin-left: -.5rem;
                     background-color: rgba($color-grey-light, .19);
+                }
+            }
+            .activeChannel {
+                background-color: rgba($color-primary-dark, .8);
+                &:hover {
+                    background-color: rgba($color-primary-dark, .8);
                 }
             }
         }
