--- a/src/components/side-panel/SidePanel.module.scss
+++ b/src/components/side-panel/SidePanel.module.scss
@@ -99,10 +99,7 @@
 
 // Channel modal
 .addChannel {
-    background-color: $color-white;
-    padding: 5rem;
-    border-radius: .3rem;
-    font-size: $default-font-size;
+    @include modalBodyStyle;
     .addChannelHeader {
         h2 {
             color: $color-primary;
@@ -130,24 +127,6 @@
         }
     }
     .channelActions {
-        margin-top: 3rem;
-        display: flex;
-        justify-content: flex-end;
-        button {
-            text-transform: uppercase;
-            font-size: 1.25rem;
-            background-color: rgba($color-black, .15);
-            padding: 1rem .5rem;
-            width: 10rem;
-            outline: none;
-            &:first-child {
-                background-color: $color-primary;
-                margin-right: 1rem;
-                @include mainButtonStyle;
-            }
-            &:last-child {
-                background-color: rgba($color-grey-dark, .1);
-            }
-        }
+        @include modalActionsButtons;
     }
 }
