--- a/src/components/messages/Messages.module.scss
+++ b/src/components/messages/Messages.module.scss
@@ -10,7 +10,7 @@
     height: 7rem;
     position: relative;
     background-image: radial-gradient($color-primary-light, $color-primary);
-    .test {
+    .messagesHeaderContent {
         height: 100%;
         display: flex;
         align-items: flex-start; 
@@ -20,10 +20,11 @@
         h2 {
             color: $color-grey-light;
             text-transform: uppercase;
+            font-size: 1.5rem;
         }
         .subMessagesHeader {
             span {
-                font-size: 1.3rem;
+                font-size: 1.2rem;
                 color: rgba($color-grey-light, .5);
             }
         }
@@ -92,14 +93,22 @@
         .optionsContent {
             position: absolute;
             top: -12rem;
-            left: 2.4rem;
+            left: 0;
+            width: 100%;
             opacity: 0;
+            // background: rgba($color-white, .1);
             transform: translateY(5rem);
             transition: all .2s ease-in-out;
             ul {
                 li {
                     &:not(:first-child) {
                         margin-top: 2rem;
+                    }
+                    &:nth-of-type(1) {
+                        color: #3498db;
+                    }
+                    &:nth-of-type(2) {
+                        color: #f1c40f;
                     }
                 }
             }
@@ -151,16 +160,13 @@
         &::before {
             content: ' ';
             right: .5rem;
-            top: -1rem;
+            top: -1.25rem;
             border: solid transparent;
-            border-bottom-color: $color-white;
+            border-bottom-color: $color-primary-dark;
             height: 0;
             width: 0;
             position: absolute;
             border-width: .6rem;
-        }
-        .userName {
-            color: $color-primary-dark;
         }
     }
 }
@@ -175,9 +181,9 @@
         &::before {
             content: ' ';
             left: .5rem;
-            top: -1rem;
+            top: -1.25rem;
             border: solid transparent;
-            border-bottom-color: $color-white;
+            border-bottom-color: $color-primary-dark;
             height: 0;
             width: 0;
             position: absolute;
@@ -199,28 +205,30 @@
         height: 2.5rem;
         margin-bottom: 1.5rem;
     }
+    .msgPhoto {
+        .imgMsg {
+            border-radius: .3rem;
+        }
+    }
     .msgContent {
-        background-color: $color-white;
+        background-color: $color-primary-dark;
         color: $color-black;
         padding: 1rem 2rem;
         border-radius: .3rem;
-        .imgMsg {
-            // 
-        }
         .userName {
             font-weight: 600;
         }
         .messageText {
             margin: 1rem 0;
             line-height: 1.7;
-            color: rgba($color-black, .8);
+            color: rgba($color-white, .8);
         }
-        .messageDate {
-            color: rgba($color-black, .5);
-            font-size: 1.3rem;
-            display: flex;
-            justify-content: flex-end;
-        }
+    }
+    .messageDate {
+        color: rgba($color-white, .45);
+        font-size: 1.3rem;
+        display: flex;
+        justify-content: flex-end;
     }
 }
 
