--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@
 html {
     // This defines what 1rem is
     font-size: 62.5%; // 1 rem = 10px; 10px / 16px = 62.5%
+    scroll-behavior: smooth;
 }
 
 html,
