--- a/src/components/messages/Messages.module.scss
+++ b/src/components/messages/Messages.module.scss
@@ -219,7 +219,7 @@
             font-weight: 600;
         }
         .messageText {
-            margin: 1rem 0;
+            margin: 0 0 1rem 0;
             line-height: 1.7;
             color: rgba($color-white, .8);
         }
