put private channel in global state

--- a/src/components/side-panel/SidePanel.module.scss
+++ b/src/components/side-panel/SidePanel.module.scss
@@ -6,6 +6,8 @@
     background-color: $color-primary-dark;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
+    scroll-behavior: smooth;
     // user panel component
     .userpanelHeader {
         text-align: center;
