--- a/src/components/meta-panel/MetaPanel.module.scss
+++ b/src/components/meta-panel/MetaPanel.module.scss
@@ -6,25 +6,80 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
-    font-size: $default-font-size;
-    color: $color-white;
     .metapanelHeader {
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 2rem;
+        text-align: center;
         h2 {
-            word-break: break-all;
+            font-family: 'Lobster', cursive;
+            font-size: 3.5rem;
+            color: $color-grey-light;
+            text-transform: uppercase;
+            letter-spacing: .3rem;
+            margin-bottom: 1rem;
         }
     }
     .metapanelContent {
         .details {
             margin-bottom: 2rem;
+            h3 {
+                margin-bottom: 1rem;
+                font-size: $default-font-size;
+                color: $color-grey-light;
+            }
+            p {
+                font-size: 1.4rem;
+                color: rgba($color-grey-light, .5);
+            }
         }
         .topPosters {
             margin-bottom: 2rem;
+            h3 {
+                margin-bottom: 1rem;
+                font-size: $default-font-size;
+                color: $color-grey-light;
+            }
+            .posters {
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-start;
+                .poster {
+                    &:not(:first-child) {
+                        margin-top: 1.5rem;
+                    }
+                    display: flex;
+                    flex-direction: row;
+                    .avatar {
+                        width: 3.5rem;
+                        height: 3.5rem;
+                        border-radius: 50%;
+                        margin-right: 1rem;
+                    }
+                    .userInfo {
+                        margin-top: -.1rem;
+                        color: rgba($color-grey-light, .5);
+                        font-size: 1.2rem;
+                    }
+                }
+            }
         }
         .creator {
-
+            h3 {
+                margin-bottom: 1rem;
+                font-size: $default-font-size;
+                color: $color-grey-light;
+            }
+            p {
+                display: inline-block;
+                color: rgba($color-grey-light, .5);
+                font-size: 1.1rem;
+            }
+            .avatar {
+                display: inline-block;
+                width: 3.5rem;
+                height: 3.5rem;
+                border-radius: 50%;
+                margin-right: 1rem;
+            }
         }
     }
 }
