--- a/src/components/meta-panel/MetaPanel.module.scss
+++ b/src/components/meta-panel/MetaPanel.module.scss
@@ -15,6 +15,7 @@
             text-transform: uppercase;
             letter-spacing: .3rem;
             margin-bottom: 1rem;
+            word-break: break-all;
         }
     }
     .metapanelContent {
