--- a/src/components/side-panel/SidePanel.module.scss
+++ b/src/components/side-panel/SidePanel.module.scss
@@ -218,3 +218,19 @@
         @include modalActionsButtons;
     }
 }
+
+// user panel modal
+.changeAvatar {
+    @include modalBodyStyle;
+    .changeAvatarContent {
+        input {
+            margin-bottom: 1.5rem;
+        }
+    }
+    .changeAvatarActions {
+        @include modalActionsButtons;
+        button:nth-of-type(2) {
+            margin-right: 1rem;
+        }
+    }
+}
