--- a/src/components/messages/Messages.module.scss
+++ b/src/components/messages/Messages.module.scss
@@ -260,3 +260,45 @@
         }
     }
 }
+
+// Typing.js
+.typing {
+    width: 10rem;
+    height: 3rem;
+    position: relative;
+    background: rgba($color-primary-dark, .5);
+    border-radius: .4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .typingDot {
+        width: .7rem;
+        height: .7rem;
+        margin: 0 4px;
+        background: $color-white;
+        border-radius: 50%;
+        opacity: 0;
+        animation: typing 1s infinite;
+        &:nth-of-type(1) {
+            animation-delay: 0s;
+        }
+        &:nth-of-type(2) {
+            animation-delay: .2s;
+        }
+        &:nth-of-type(3) {
+            animation-delay: .4s;
+        }
+    }
+}
+
+@keyframes typing {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: .8;
+    }
+    100% {
+        opacity: 0;
+    }
+}
