--- a/src/components/messages/Messages.module.scss
+++ b/src/components/messages/Messages.module.scss
@@ -116,7 +116,7 @@
         }
         .optionsContent {
             position: absolute;
-            top: -12rem;
+            top: -6rem;
             left: 0;
             width: 100%;
             opacity: 0;
@@ -128,10 +128,7 @@
                         margin-top: 2rem;
                     }
                     &:nth-of-type(1) {
-                        color: #3498db;
-                    }
-                    &:nth-of-type(2) {
-                        color: #f1c40f;
+                        color: $color-yellow;
                     }
                 }
             }
